[package]
name = "pa3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
